# SecureMySite

./: .gitignore  LICENSE  README.md  TODO.md  USER_GUIDE.md  app.py  index.html  main.py  pyproject.toml  requirements.txt  start.bat
assets/: vuln_db.json
core/: __init__.py  config.py  engine.py  file_loader.py
gui/: __init__.py  components.py  main_window.py  theme.py
models/: __init__.py  scan_result.py  vulnerability.py
prompt_engine/: __init__.py  prompt_builder.py
scanners/: __init__.py  base_scanner.py  config_scanner.py  dependency_scanner.py  js_scanner.py  python_sast.py  web_scanner.py
scoring/: __init__.py  score_engine.py  severity.py
tests/: __init__.py  test_integration.py
tests/sample_vulnerable_project/: app.py  requirements.txt
tests/sample_vulnerable_project/static/: app.js
utils/: __init__.py  helpers.py  validators.py
