[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "securemysite"
version = "1.0.0"
description = "Local security analyzer for AI-generated web projects"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SecureMySite Team"}
]
keywords = ["security", "sast", "scanner", "vulnerability", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "PyQt6>=6.4.0",
    "requests>=2.28.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.scripts]
securemysite = "main:main"

[project.urls]
Homepage = "https://github.com/tworjaga/SecureMySite"
Repository = "https://github.com/tworjaga/SecureMySite.git"
Issues = "https://github.com/tworjaga/SecureMySite/issues"

[tool.setuptools]
packages = [
    "models",
    "scoring",
    "scanners",
    "core",
    "utils",
    "prompt_engine",
    "gui",
]

[tool.setuptools.package-data]
scanners = ["vuln_db.json"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyqt6"
